cryptography  first check in

--- a/site/content/courses/books/cryptography/cryptography.htm
+++ b/site/content/courses/books/cryptography/cryptography.htm
@@ -10,13 +10,11 @@ draft: false
     <div class="slides">
 
         <section>
-            $$ \f\relax{x} = \int_{-\infty}^\infty
-            \f\hat\xi\,e^{2 \pi i \xi x}
-            \,d\xi $$
+            Section 1
           </section>
 
           <section>
-            $$ \f\relax{x} $$
+            Section 2
           </section>
 
     </div>
