tls changes completed

--- a/site/content/courses/books/cybersecurity/pki.htm
+++ b/site/content/courses/books/cybersecurity/pki.htm
@@ -9,13 +9,9 @@ draft: false
 
     <div class="slides">
 
-        <section>
-          பொதுத் திறவி உள்கட்டமைப்பு 1
-          </section>
-
-          <section>
-            பொதுத் திறவி உள்கட்டமைப்பு 2
-          </section>
+      <section data-background-iframe="https://onedrive.live.com/edit.aspx?resid=44E3FF1DE9A8C7EA!213&ithint=file%2cpptx&authkey=!ANBpN1ZpAp1KA58"
+      data-background-interactive>
+      </section>
 
     </div>
 
